fixed overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  padding: 5%;
+  margin: 5%;
 }
 
 .App-logo {
@@ -36,4 +36,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.no-overflow {
+  overflow: hidden;
+}
+
+.results {
+  justify-content: center;
 }
